Alignment issue
- Alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ body {
 
 .nav-button { 
     position: absolute;
-     top: 1em;
+    top: 1em;
     left: 1em;
     height: 3em;
     width: 3em;
@@ -235,14 +235,28 @@ h1 {
 }
 
 @-webkit-keyframes fadeIn { 
-    0% {opacity: 0;} 
-    100% {opacity: 1;} 
+    
+    0% {
+        opacity: 0;
+    } 
+    
+    100% {
+        opacity: 1;
+    } 
 
 } 
 
 @keyframes fadeIn { 
-    0% {opacity: 0;} 
-    100% {opacity: 1;} 
+    
+    0% {
+        opacity: 0;
+    
+    } 
+    
+    100% {
+        opacity: 1;
+    
+    } 
 
 } 
 
@@ -273,7 +287,7 @@ h1 {
         width: 50%;
         left: 25%;
         position: absolute;
-        -wepkit-animation: racket .2s ease-in-out infinite alternate;
+        -wepkit-animation: racket .2s infinite alternate;
         animation: racket .2s ease-in-out infinite alternate;
 
     }
@@ -294,7 +308,7 @@ h1 {
     .ball { 
         width: 9%;
         -webkit-animation: ball .2s ease-in-out infinite alternate;
-        animation: ball .2s ease-in-out infinite alternate;
+        animation: ball .2s infinite alternate;
         position: absolute;
         left: 45.5%;
         display: block;
